change title, team name make new dir 'articles' for article html

--- a/map.html
+++ b/map.html
@@ -24,7 +24,7 @@ Free for personal and commercial use under the Apache 2.0 license
 
 							<!-- Logo -->
 								<a href="index.html" class="logo">
-									<span class="symbol"><img src="images/logo.jpg" alt="" /></span><span class="title">구운 바나나</span>
+									<span class="symbol"><img src="images/logo.jpg" alt="" /></span><span class="title">Cardnews Viewer</span>
 								</a>
 
 							<!-- Nav -->
@@ -35,7 +35,7 @@ Free for personal and commercial use under the Apache 2.0 license
 								</nav>
 
 								<div style="text-align: center">
-									<h1>찾아오시는 길</h1>
+									<h1>Location</h1>
 								</div>
 
 						</div>
@@ -45,12 +45,12 @@ Free for personal and commercial use under the Apache 2.0 license
 				<nav id="menu">
 					<h2>Menu</h2>
 					<ul>
-						<li><a href="index.html">오늘의뉴스</a></li>
-						<li><a href="cur_ev.html">시사</a></li>
-						<li><a href="ittech.html">과학,기술</a></li>
-						<li><a href="life.html">생활</a></li>
-						<li><a href="map.html">찾아오는 길</a></li>
-						<li><a href="lisence.html">라이센스</a></li>
+						<li><a href="index.html">Main</a></li>
+						<li><a href="cur_ev.html">Social</a></li>
+						<li><a href="ittech.html">Tech</a></li>
+						<li><a href="life.html">Living</a></li>
+						<li><a href="map.html">Company</a></li>	<!--빼는게 좋을듯-->
+						<li><a href="lisence.html">License</a></li>
 					</ul>
 				</nav>
 
@@ -106,7 +106,7 @@ Free for personal and commercial use under the Apache 2.0 license
 								<h2>Follow</h2>
 								<ul class="icons">
 									<li><a href="https://www.facebook.com/%EA%B5%AC%EC%9A%B4-%EB%B0%94%EB%82%98%EB%82%98-124290291669182/" class="icon style2 fa-facebook"><span class="label">Facebook</span></a></li>
-									<li><a href="https://github.com/ParkShinHyun92/Web_yellow_9" class="icon style2 fa-github"><span class="label">GitHub</span></a></li>
+									<li><a href="https://github.com/navy-06/Web_yellow_9" class="icon style2 fa-github"><span class="label">GitHub</span></a></li>
 								</ul>
 							</section>
 							<ul class="copyright">
