--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ Free for personal and commercial use under the Apache 2.0 license
 -->
 <html>
 	<head>
-		<title>구운 바나나</title>
+		<title>Cardnews Viewer</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -24,7 +24,7 @@ Free for personal and commercial use under the Apache 2.0 license
 
 							<!-- Logo -->
 								<a href="index.html" class="logo">
-									<span class="symbol"><img src="images/logo.jpg" alt="" /></span><span class="title">구운 바나나</span>
+									<span class="symbol"><img src="images/logo.jpg" alt="" /></span><span class="title">Cardnews Viewer v1.0</span>	<!--홈페이지 타이틀-->
 								</a>
 
 							<!-- Nav -->
@@ -36,7 +36,7 @@ Free for personal and commercial use under the Apache 2.0 license
 
 						</div>
 						<div style="text-align: center">
-							<h1>오늘의 뉴스</h1>
+							<h1>Todays News</h1>
 						</div>
 					</header>
 
@@ -44,12 +44,12 @@ Free for personal and commercial use under the Apache 2.0 license
 					<nav id="menu">
 						<h2>Menu</h2>
 						<ul>
-							<li><a href="index.html">오늘의뉴스</a></li>
-							<li><a href="cur_ev.html">시사</a></li>
-							<li><a href="ittech.html">과학,기술</a></li>
-							<li><a href="life.html">생활</a></li>
-							<li><a href="map.html">찾아오는 길</a></li>
-							<li><a href="lisence.html">라이센스</a></li>
+							<li><a href="index.html">Main</a></li>
+							<li><a href="cur_ev.html">Social</a></li>
+							<li><a href="ittech.html">Tech</a></li>
+							<li><a href="life.html">Living</a></li>
+							<li><a href="map.html">Company</a></li>	<!--빼는게 좋을듯-->
+							<li><a href="lisence.html">License</a></li>
 						</ul>
 					</nav>
 
@@ -63,74 +63,79 @@ Free for personal and commercial use under the Apache 2.0 license
 									<span class="image">
 										<img src="https://scontent-hkg3-1.xx.fbcdn.net/v/t1.0-9/13495295_981249905307511_6993319709784585917_n.png?oh=8380afbfb3a3abc8d80272010732f95c&oe=5A7A0A23" alt=""  style="width: 80; height: 300px;"/>
 									</span>
-									<a href="FB_research.html">
-										<h2>1위</h2>
+									<a href="articles/FB_research.html">
+										<h2>1위</h2>	<!--굳이 순위를 매겨야 되나?-->
 										<div class="content">
 											<p>카드뉴스 만드는 녀자</p>
 										</div>
 									</a>
 								</article>
+
 								<!-- 기술, 생활 -->
 								<article class="style2">
 									<span class="image">
 										<img src="https://scontent-icn1-1.xx.fbcdn.net/v/t31.0-8/17758544_1880893505516006_3729143927971338058_o.jpg?oh=dbc8f0488814c002e34f5cf11c7a5787&oe=5A7B274C" alt=""  style="width: 80; height: 300px;"/>
 									</span>
-									<a href="neighbor.html">
-										<h2>2위</h2>
+									<a href="articles/neighbor.html">
+										<h2>2위</h2>	<!--굳이 순위를 매겨야 되나?-->
 										<div class="content">
 											<p>카드뉴스 제작소</p>
 										</div>
 									</a>
 								</article>
+
 								<!-- 시사, 과학 -->
 								<article class="style3">
 									<span class="image">
 										<img src="images/AI/logo.jpg" alt="" style="width: 80; height: 300px;"/>
 									</span>
-									<a href="AI.html">
+									<a href="articles/AI.html">
 										<h2>3위</h2>
 										<div class="content">
 											<p>인공지능의 시대, 일자리 확 줄어든다</p>
 										</div>
 									</a>
 								</article>
+
 								<!-- 시사, 과학 -->
 								<article class="style4">
 									<span class="image">
 										<img src="http://image.kmib.co.kr/online_image/2014/0520/140519_39_4.jpg" alt=""  style="width: 80; height: 300px;"/>
 									</span>
-									<a href="clinical_ex.html">
+									<a href="articles/clinical_ex.html">
 										<h2>4위</h2>
 										<div class="content">
 											<p>임상실험하다 인생 망해요</p>
 										</div>
 									</a>
 								</article>
+
 								<!-- 생활 -->
 								<article class="style5">
 									<span class="image">
 										<img src="images/jap/1.jpg" alt=""  style="width: 80; height: 300px;"/>
 									</span>
-									<a href="jap.html">
+									<a href="articles/jap.html">
 										<h2>5위</h2>
 										<div class="content">
 											<p>왔다리 갔다리가 일본말?</p>
 										</div>
 									</a>
 								</article>
+
 								<!-- 시사 -->
 								<article class="style6">
 									<span class="image">
 										<img src="images/deathPenalty/1.jpg" style="width: 80; height: 300px;"/>
 									</span>
-									<a href="deathPenalty.html">
+									<a href="articles/deathPenalty.html">
 										<h2>6위</h2>
 										<div class="content">
 											<p>사형은 안되는 사형법?</p>
 										</div>
-
 									</a>
 								</article>
+
 							</div>
 						</div>
 						<script type="text/javascript" src="hashover.php"></script>
@@ -139,8 +144,9 @@ Free for personal and commercial use under the Apache 2.0 license
 				<!-- Footer -->
 					<footer id="footer">
 						<div class="inner">
+
 							<section>
-								<h2>Get in touch</h2>
+								<h2>Contact</h2>	<!--contact-->
 								<form method="post" action="#">
 									<div class="field half first">
 										<input type="text" name="name" id="name" placeholder="Name" />
@@ -156,17 +162,19 @@ Free for personal and commercial use under the Apache 2.0 license
 									</ul>
 								</form>
 							</section>
+
 							<section>
 								<h2>Follow</h2>
 								<ul class="icons">
-									<li><a href="https://www.facebook.com/%EA%B5%AC%EC%9A%B4-%EB%B0%94%EB%82%98%EB%82%98-124290291669182/" class="icon style2 fa-facebook"><span class="label">Facebook</span></a></li>
-									<li><a href="https://github.com/ParkShinHyun92/Web_yellow_9" class="icon style2 fa-github"><span class="label">GitHub</span></a></li>
-
+									<li><a href="https://www.facebook.com/%EA%B5%AC%EC%9A%B4-%EB%B0%94%EB%82%98%EB%82%98-124290291669182/" class="icon style2 fa-facebook"><span class="label">Facebook</span></a></li>	<!--페이스북 개발자 그룹 링크로 대체 예정-->
+									<li><a href="https://github.com/navy-06/Web_yellow_9" class="icon style2 fa-github"><span class="label">GitHub</span></a></li>
 								</ul>
 							</section>
+
 							<ul class="copyright">
 								<li>&copy; Untitled. All rights reserved</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 							</ul>
+
 						</div>
 					</footer>
 
