--- a/license.html
+++ b/license.html
@@ -2,11 +2,11 @@
 <!--
 	구운 바나나 by OSSW Basic 2017 team yellow 9
 	https://github.com/ParkShinHyun92/Web_yellow_9
-	Free for personal and commercial use under the Apache 2.0 license 
+	Free for personal and commercial use under the Apache 2.0 license
 -->
 <html>
 	<head>
-		<title>구운 바나나</title>
+		<title>Cardnews Viewer</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -45,12 +45,12 @@
 				<nav id="menu">
 					<h2>Menu</h2>
 					<ul>
-						<li><a href="index.html">오늘의뉴스</a></li>
-						<li><a href="cur_ev.html">시사</a></li>
-						<li><a href="ittech.html">과학,기술</a></li>
-						<li><a href="life.html">생활</a></li>
-						<li><a href="map.html">찾아오는 길</a></li>
-						<li><a href="lisence.html">라이센스</a></li>
+						<li><a href="index.html">Main</a></li>
+						<li><a href="cur_ev.html">Social</a></li>
+						<li><a href="ittech.html">Tech</a></li>
+						<li><a href="life.html">Living</a></li>
+						<li><a href="map.html">Company</a></li>	<!--빼는게 좋을듯-->
+						<li><a href="lisence.html">License</a></li>
 					</ul>
 				</nav>
 
@@ -91,7 +91,7 @@
 								<h2>Follow</h2>
 								<ul class="icons">
 									<li><a href="https://www.facebook.com/%EA%B5%AC%EC%9A%B4-%EB%B0%94%EB%82%98%EB%82%98-124290291669182/" class="icon style2 fa-facebook"><span class="label">Facebook</span></a></li>
-									<li><a href="https://github.com/ParkShinHyun92/Web_yellow_9" class="icon style2 fa-github"><span class="label">GitHub</span></a></li>
+									<li><a href="https://github.com/navy-06/Web_yellow_9" class="icon style2 fa-github"><span class="label">GitHub</span></a></li>
 								</ul>
 							</section>
 							<ul class="copyright">
