change fb adr, change title name = nemo

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ Free for personal and commercial use under the Apache 2.0 license
 -->
 <html>
 	<head>
-		<title>Cardnews Viewer</title>
+		<title>Nemo</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -24,7 +24,7 @@ Free for personal and commercial use under the Apache 2.0 license
 
 							<!-- Logo -->
 								<a href="index.html" class="logo">
-									<span class="symbol"><img src="images/logo.jpg" alt="" /></span><span class="title">Cardnews Viewer v1.0</span>	<!--홈페이지 타이틀-->
+									<span class="symbol"><img src="images/logo.jpg" alt="" /></span><span class="title">Nemo</span>	<!--홈페이지 타이틀-->
 								</a>
 
 							<!-- Nav -->
@@ -166,7 +166,7 @@ Free for personal and commercial use under the Apache 2.0 license
 							<section>
 								<h2>Follow</h2>
 								<ul class="icons">
-									<li><a href="https://www.facebook.com/%EA%B5%AC%EC%9A%B4-%EB%B0%94%EB%82%98%EB%82%98-124290291669182/" class="icon style2 fa-facebook"><span class="label">Facebook</span></a></li>	<!--페이스북 개발자 그룹 링크로 대체 예정-->
+									<li><a href="https://www.facebook.com/groups/146509015998587/" class="icon style2 fa-facebook"><span class="label">Facebook</span></a></li>	<!--페이스북 개발자 그룹 링크로 대체 예정-->
 									<li><a href="https://github.com/navy-06/Web_yellow_9" class="icon style2 fa-github"><span class="label">GitHub</span></a></li>
 								</ul>
 							</section>
