--- a/cur_ev.html
+++ b/cur_ev.html
@@ -125,7 +125,7 @@ Free for personal and commercial use under the Apache 2.0 license
 							<section>
 								<h2>Follow</h2>
 								<ul class="icons">
-									<li><a href="https://www.facebook.com/%EA%B5%AC%EC%9A%B4-%EB%B0%94%EB%82%98%EB%82%98-124290291669182/" class="icon style2 fa-facebook"><span class="label">Facebook</span></a></li>
+									<li><a href="https://www.facebook.com/groups/146509015998587/" class="icon style2 fa-facebook"><span class="label">Facebook</span></a></li>
 									<li><a href="https://github.com/navy-06/Web_yellow_9" class="icon style2 fa-github"><span class="label">GitHub</span></a></li>
 
 								</ul>
