--- a/lisence.html
+++ b/lisence.html
@@ -67,7 +67,7 @@
 
             <span class="image main"><img src="images/logo.jpg" alt="" /></span>
             <p>라이센스</p>
-						<p>This Webpage is Copyright ⓒ 2017 yellow-09. All rights reserved.
+						<p>This Webpage is Copyright ⓒ 2017 navy-06. All rights reserved.
 
 							This Webpage use Open Source Software (OSS). You can find the source code of these open source project, along with applicable license information, below. We are deeply grateful to these developers for their work and contributions.
 
@@ -328,7 +328,7 @@
 							<section>
 								<h2>Follow</h2>
 								<ul class="icons">
-									<li><a href="https://www.facebook.com/%EA%B5%AC%EC%9A%B4-%EB%B0%94%EB%82%98%EB%82%98-124290291669182/" class="icon style2 fa-facebook"><span class="label">Facebook</span></a></li>
+									<li><a href="https://www.facebook.com/groups/146509015998587/" class="icon style2 fa-facebook"><span class="label">Facebook</span></a></li>
 									<li><a href="https://github.com/navy-06/Web_yellow_9" class="icon style2 fa-github"><span class="label">GitHub</span></a></li>
 								</ul>
 							</section>
