--- a/lisence.html
+++ b/lisence.html
@@ -82,7 +82,7 @@
 							Polymer – frontend
 							https://www.polymer-project.org/
 							Copyright 2017 Polymer Authors.
-							CC BY 3.0 License
+							BSD License 2.0
 
 
 							Jssor – function
