--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ Free for personal and commercial use under the Apache 2.0 license
 
 							<!-- Logo -->
 								<a href="index.html" class="logo">
-									<span class="symbol"><img src="images/logo.jpg" alt="" /></span><span class="title">Nemo</span>	<!--홈페이지 타이틀-->
+									<span class="symbol"><img src="/Web_yellow_9/images/logo.jpg" alt="" /></span><span class="title">Nemo</span>	<!--홈페이지 타이틀-->
 								</a>
 
 							<!-- Nav -->
