--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ Free for personal and commercial use under the Apache 2.0 license
 -->
 <html>
 	<head>
-		<title>한양대에리카 소프트웨어학부 PBL 카드뉴스 프로젝트</title>
+		<title>오픈소스로 만든 카드뉴스_HYU_팀네모네모네이비</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
