--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@ Free for personal and commercial use under the Apache 2.0 license
 	<head>
 		<title>오픈소스로 만든 카드뉴스_HYU_팀네모네모네이비</title>
 		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<meta name="google-site-verification" content="-urYpUEMnW3TP2VHdR6CuAMgP9hNqb0gN-4vPeniWbc" />
+		<!--<meta name="viewport" content="width=device-width, initial-scale=1" />-->
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
