--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ Free for personal and commercial use under the Apache 2.0 license
 -->
 <html>
 	<head>
-		<title>오픈소스로 만든 카드뉴스_HYU_팀네모네모네이비</title>
+		<title>오픈소스로 만든 카드뉴스_HYU_팀_네모</title>
 		<meta charset="utf-8" />
 		<meta name="google-site-verification" content="-urYpUEMnW3TP2VHdR6CuAMgP9hNqb0gN-4vPeniWbc" />
 		<!--<meta name="viewport" content="width=device-width, initial-scale=1" />-->
