--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@ Free for personal and commercial use under the Apache 2.0 license
 -->
 <html>
 	<head>
-		<title>오픈소스로 만든 카드뉴스_HYU_팀_네모</title>
+		<title>오픈소스 카드뉴스 | HYU PBL class</title>
 		<meta charset="utf-8" />
 		<meta name="google-site-verification" content="-urYpUEMnW3TP2VHdR6CuAMgP9hNqb0gN-4vPeniWbc" />
+		<meta name="description" content="한양대학교 학생들이 PBL수업에서 오픈소스를 이용해서 만든 카드뉴스 페이지입니다. This page is about a cardnews that students of Hanyang Universiy made for PBL class.">
 		<!--<meta name="viewport" content="width=device-width, initial-scale=1" />-->
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
 		<link rel="stylesheet" href="assets/css/main.css" />
