--- a/User_manual.html
+++ b/User_manual.html
@@ -61,44 +61,45 @@ Free for personal and commercial use under the Apache 2.0 license
 				<div class="maunal" style="margin-bottom: 0;margin-top: 0;margin-right: 20%;margin-left: 20%; overflow:hidden;">
 						<div class="manual_1_pic" style="text-align: center; float:right;">
 							<div>
-								<img height="222" width="340" src="https://angular.io/generated/images/marketing/home/responsive-framework.svg">
+								<img height="180" width="300" src="images/manual/main_manual.jpg">
 							</div>
 						</div>
 						<div class="textContainer">
-							<div style ="margin-bottom: 0;margin-top: 5%;margin-right: 20%;margin-left: 20% padding:0; padding-right:15%;">
-								<div style="text-align: center; font-size:20px; font-weight:500; color:#1976d2; mragin-top:10px; text-transform:uppercase;">helleoeheo</div>
-								<p style="color: rgba(0,0,0,.87);font-size: 14px;line-height: 24px;font-weight: 400;"> "Learn one way to build applications with Angular and reuse your code and abilities to build apps for any deployment target. For web, mobile web, native mobile and native desktop."</p>
+							<div style ="margin-bottom: 0;margin-top: 3%;margin-right: 25%;margin-left: 30%; padding-right:15%;">
+								<div style="text-align: center; font-size:20px; font-weight:500; color:#1976d2; mragin-top:10px; text-transform:uppercase;">메인에서 기사보기</div>
+								<p style="color: rgba(0,0,0,.87);font-size: 14px;"> 메인의 이미지 아이콘을 클릭하면 해당 기사로 넘어갈 수 있습니다. 메인의 보고싶은 기사의 아이콘을 클릭해 카드뉴스를 읽어보세요.</p>
 							</div>
 						</div>
 				</div>
 				<hr style="border:none; background: #dbdbdb; height: 1px">
 			<!--group2-->
 			<div class="maunal" style="margin-bottom: 0;margin-top: 0;margin-right: 20%;margin-left: 20%; overflow:hidden;">
-					<div class="manual_1_pic" style="text-align: center; float:right;">
-						<div>
-							<img height="222" width="340" src="https://angular.io/generated/images/marketing/home/responsive-framework.svg">
-						</div>
-					</div>
-					<div class="textContainer">
-						<div style ="margin-bottom: 0;margin-top: 5%;margin-right: 20%;margin-left: 20% padding:0; padding-right:15%;">
-							<div style="text-align: center; font-size:20px; font-weight:500; color:#1976d2; mragin-top:10px; text-transform:uppercase;">helleoeheo</div>
-							<p style="color: rgba(0,0,0,.87);font-size: 14px;line-height: 24px;font-weight: 400;"> "Learn one way to build applications with Angular and reuse your code and abilities to build apps for any deployment target. For web, mobile web, native mobile and native desktop."</p>
-						</div>
-					</div>
-			</div>
-			<hr style="border:none; background: #dbdbdb; height: 1px">
-		<!--group3-->
-		<div class="maunal" style="margin-bottom: 0;margin-top: 0;margin-right: 20%;margin-left: 20%; overflow:hidden;">
-				<div class="manual_1_pic" style="text-align: center; float:right;">
+				<div class="manual_1_pic" style="float : left; text-align: center">
 					<div>
-						<img height="222" width="340" src="https://angular.io/generated/images/marketing/home/responsive-framework.svg">
+						<img height="180" width="300"  src="images/manual/menu_manual.jpg">
 					</div>
 				</div>
 				<div class="textContainer">
-					<div style ="margin-bottom: 0;margin-top: 5%;margin-right: 20%;margin-left: 20% padding:0; padding-right:15%;">
-						<div style="text-align: center; font-size:20px; font-weight:500; color:#1976d2; mragin-top:10px; text-transform:uppercase;">helleoeheo</div>
-						<p style="color: rgba(0,0,0,.87);font-size: 14px;line-height: 24px;font-weight: 400;"> "Learn one way to build applications with Angular and reuse your code and abilities to build apps for any deployment target. For web, mobile web, native mobile and native desktop."</p>
+					<div style ="margin-bottom: 0;margin-top: 3%;margin-right:30%;margin-left: 40%;">
+						<div style="text-align: center; font-size:20px; font-weight:500; color:#1976d2; mragin-top:10px; text-transform:uppercase;">메뉴에서 기사보기</div>
+						<p style="color: rgba(0,0,0,.87);font-size: 14px;"> 메뉴에서 보고싶은 카테고리를 클릭하면 해당 카테고리로 넘어갈 수 있습니다. 카테고리에서 보고싶은 기사의 아이콘을 클릭해 카드뉴스를 읽어보세요.</p>
 					</div>
+				</div>
+			</div>
+			<hr style="border:none; background: #dbdbdb; height: 1px">
+		<!--group3-->
+		<div class="maunal" style="margin-bottom: 0%;margin-top: 0;margin-right: 20%;margin-left: 20%; overflow:hidden;">
+				<div class="manual_1_pic" style="text-align: center; float:right;">
+					<div>
+						<img height="222" width="340" src="images/manual/method_manual.jpg">
+					</div>
+				</div>
+				<div style ="margin-bottom: 0;margin-top:0;margin-right:10%;margin-left: 15%;">
+					<div style="text-align: center; font-size:20px; font-weight:500; color:#1976d2; mragin-top:10px; text-transform:uppercase;">카드뉴스 보기</div>
+					<p style="color: rgba(0,0,0,.87);font-size: 14px;"> 이미지의 좌측과 우측을 클릭해 넘길 수 있습니다.</p>
+					<p style="color: rgba(0,0,0,.87);font-size: 14px;"> 드래그를 통해 넘길 수 있습니다</p>
+					<p style="color: rgba(0,0,0,.87);font-size: 14px;"> 버튼을 클릭해 원하는 페이지로 넘길 수 있습니다.</p>
+					<p style="color: rgba(0,0,0,.87);font-size: 14px;"> 출처를 클릭해 해당기사의 원본을 확인하실 수 있습니다.</p>
 				</div>
 		</div>
 		<hr style="border:none; background: #dbdbdb; height: 1px">
