--- a/User_manual.html
+++ b/User_manual.html
@@ -105,18 +105,19 @@ Free for personal and commercial use under the Apache 2.0 license
 		<hr style="border:none; background: #dbdbdb; height: 1px">
 	<!--group4-->
 	<div class="maunal" style="margin-bottom: 0;margin-top: 0;margin-right: 20%;margin-left: 20%; overflow:hidden;">
-			<div class="manual_1_pic" style="text-align: center; float:right;">
-				<div>
-					<img height="222" width="340" src="https://angular.io/generated/images/marketing/home/responsive-framework.svg">
-				</div>
+		<div class="manual_1_pic" style="margin-top: 0;margin-right:3%;margin-left:0%;float : left; text-align: center">
+			<div>
+				<img height="80" width="90"  src="images/manual/follow_manual.jpg">
 			</div>
-			<div class="textContainer">
-				<div style ="margin-bottom: 0;margin-top: 5%;margin-right: 20%;margin-left: 20% padding:0; padding-right:15%;">
-					<div style="text-align: center; font-size:20px; font-weight:500; color:#1976d2; mragin-top:10px; text-transform:uppercase;">helleoeheo</div>
-					<p style="color: rgba(0,0,0,.87);font-size: 14px;line-height: 24px;font-weight: 400;"> "Learn one way to build applications with Angular and reuse your code and abilities to build apps for any deployment target. For web, mobile web, native mobile and native desktop."</p>
-				</div>
+		</div>
+		<div class="textContainer">
+			<div style ="margin-bottom: 0;margin-top: 0;margin-right:10%;margin-left: 10%;">
+				<div style=" font-size:20px; font-weight:500; color:#1976d2; mragin-top:10px; text-transform:uppercase;">팔로우</div>
+				<p style="color: rgba(0,0,0,.87);font-size: 14px;"> 버튼을 통해 네모의 페이스북과 깃허브로 이동하실 수 있습니다.</p>
 			</div>
+		</div>
 	</div>
+	<hr style="margin-bottom: 2%;margin-top: 1%;border:none; background: #dbdbdb; height: 1px">
 			</article>
 				<!-- Footer -->
 					<footer id="footer">
