--- a/User_manual.html
+++ b/User_manual.html
@@ -118,6 +118,19 @@ Free for personal and commercial use under the Apache 2.0 license
 		</div>
 	</div>
 	<hr style="margin-bottom: 2%;margin-top: 1%;border:none; background: #dbdbdb; height: 1px">
+	<div class="maunal" style="margin-bottom: 0;margin-top: 0;margin-right: 20%;margin-left: 20%; overflow:hidden;">
+		<div class="manual_1_pic" style="margin-top: 0;margin-right:3%;margin-left:0%;float : left; text-align: center">
+			<div>
+				<img  src="images/manual/license_manual.jpg">
+			</div>
+		</div>
+		<div class="textContainer">
+			<div style ="margin-bottom: 0;margin-top: 0;margin-right:10%;margin-left: 10%;">
+				<div style=" font-size:20px; font-weight:500; color:#1976d2; mragin-top:10px; text-transform:uppercase;">라이센스</div>
+				<p style="color: rgba(0,0,0,.87);font-size: 14px;"> 메뉴에서 라이센스 카테고리에서 라이센스를 확인하실 수 있습니다.</p>
+			</div>
+		</div>
+	</div>
 			</article>
 				<!-- Footer -->
 					<footer id="footer">
