--- a/life.html
+++ b/life.html
@@ -47,6 +47,7 @@ Free for personal and commercial use under the Apache 2.0 license
 							<li><a href="life.html">Living</a></li>
 							<li><a href="map.html">Company</a></li>	<!--빼는게 좋을듯-->
 							<li><a href="lisence.html">License</a></li>
+							<li><a href="User_manual.html">User manual</a><li>
 						</ul>
 					</nav>
 
