--- a/lisence.html
+++ b/lisence.html
@@ -53,7 +53,7 @@
 						<li><a href="life.html">Living</a></li>
 						<li><a href="map.html">Company</a></li>	<!--빼는게 좋을듯-->
 						<li><a href="lisence.html">License</a></li>
-						<li><a href="User_manual.html">User manual</a><li>
+						<li><a href="User_manual.html">User manual</a></li>
 					</ul>
 				</nav>
 
