--- a/User_manual.html
+++ b/User_manual.html
@@ -24,7 +24,7 @@ Free for personal and commercial use under the Apache 2.0 license
 
 							<!-- Logo -->
 								<a href="index.html" class="logo">
-									<span class="symbol"><img src="images/logo.jpg" alt="" /></span><span class="title"></span>
+									<span class="symbol"><img src="images/logo.jpg" alt="" /></span><span class="title">Cardnews Viewer</span>
 								</a>
 
 							<!-- Nav -->
@@ -35,7 +35,7 @@ Free for personal and commercial use under the Apache 2.0 license
 								</nav>
 
 								<div style="text-align: center">
-									<h1>User Manual</h1>
+									<h1>Location</h1>
 								</div>
 
 						</div>
